Prevent overlapping of story description with footer content

--- a/src/assets/scss/pages/story.scss
+++ b/src/assets/scss/pages/story.scss
@@ -25,7 +25,7 @@
   }
 
   &-page {
-    height: 100%;
+    min-height: calc(100vh - 150px);
     position: relative;
   }
 
